--- a/src/main/resources/templates/posts-save.mustache
+++ b/src/main/resources/templates/posts-save.mustache
@@ -1,25 +1,32 @@
 {{>layout/header}}
 
-<h1>게시글 등록</h1>
+<div class="container mt-5">
+    <h2 class="mb-4 text-center font-weight-bold">📝 게시글 등록</h2>
 
-<div class="col-md-12">
-    <div class="col-md-4">
-        <form>
-            <div class="form-group">
-                <label for="title">제목</label>
-                <input type="text" class="form-control" id="title" placeholder="제목을 입력하세요">
-            </div>
-            <div class="form-group">
-                <label for="author"> 작성자</label>
-                <input type="text" class="form-control" id="author" placeholder="작성자를 입력하세요">
-            </div>
-            <div class="form-group">
-                <label for="content"> 내용</label>
-                <textarea class="form-control" id="content" placeholder="내용을 입력하세요"></textarea>
-            </div>
-        </form>
-        <a href="/" role="button" class="btn btn-secondary">취소</a>
-        <button type="button" class="btn btn-primary" id="btn-save">등록</button>
+    <div class="row justify-content-center">
+        <div class="col-md-8 col-lg-6">
+            <form>
+                <div class="form-group mb-3">
+                    <label for="title" class="form-label">제목</label>
+                    <input type="text" class="form-control" id="title" placeholder="제목을 입력하세요">
+                </div>
+
+                <div class="form-group mb-3">
+                    <label for="author" class="form-label">작성자</label>
+                    <input type="text" class="form-control" id="author" placeholder="작성자를 입력하세요">
+                </div>
+
+                <div class="form-group mb-4">
+                    <label for="content" class="form-label">내용</label>
+                    <textarea class="form-control" id="content" rows="6" placeholder="내용을 입력하세요"></textarea>
+                </div>
+
+                <div class="d-flex justify-content-between">
+                    <a href="/" class="btn btn-outline-secondary">← 목록으로</a>
+                    <button type="button" class="btn btn-primary" id="btn-save">등록하기</button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
