--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -23,7 +23,7 @@
         <table class="table table-hover text-center shadow-sm">
             <thead class="thead-light">
             <tr>
-                <th scope="col">게시 번호</th>
+                <th scope="col">게시글 번호</th>
                 <th scope="col">제목</th>
                 <th scope="col">작성자</th>
                 <th scope="col">최종 수정일</th>
